--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,9 @@ dependencies {
     compileOnly('jakarta.servlet:jakarta.servlet-api:6.0.0')
     compileOnly 'org.projectlombok:lombok:1.18.30'
 
+    implementation 'org.postgresql:postgresql:42.7.3'
     implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    implementation 'org.springframework.security:spring-security-core:6.3.2'
 
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
